--- a/style.css
+++ b/style.css
@@ -42,11 +42,11 @@
   font-size: 24px;
   line-height: 28px;
   text-align: right;
+  transition: opacity 0.7s linear
 }
 
 .header__lang-link:hover {
   opacity: 0.4;
-  transition: 0.7s;
 }
 
 .header__lang-link_active {
@@ -54,3 +54,171 @@
 }
 
 /* !-------------------------------lead */
+.lead {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  max-width: 984px;
+}
+
+.lead__title {
+  font-style: normal;
+  font-weight: 900;
+  font-size: 96px;
+  line-height: 100px;
+  text-align: center;
+  margin: 56px 0 32px;
+  max-width: 720px;
+}
+
+.lead__subtitle {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 30px;
+  line-height: 36px;
+  text-align: center;
+  max-width: 640px;
+  margin: 0 0 64px;
+}
+
+.lead__image {
+  max-width: 984px;
+  max-height: 615px;
+  margin: 0 0 8px;
+}
+
+.lead__caption {
+  margin: 0;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 10px;
+  line-height: 14px;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+  align-self: start;
+}
+
+/* !-------------------------------intro */
+.intro {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  max-width: 984px;
+}
+
+.intro__title {
+  font-style: normal;
+  font-weight: 900;
+  font-size: 54px;
+  line-height: 58px;
+  margin: 92px 0 40px;
+}
+
+.intro__text {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 163%;
+  margin: 0 0 33px;
+}
+
+.intro__list {
+  list-style-type: none;
+  font-style: normal;
+  font-size: 12px;
+  line-height: 18px;
+  padding: 0;
+  margin: 0;
+}
+
+.intro__item {
+}
+
+/* !-------------------------------photo-grid*/
+.photo-grid {
+  display: grid;
+  max-width: 1184px;
+  grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
+  grid-gap: 16px;
+  margin: 92px auto;
+}
+
+.photo-grid__item {
+  width: 100%;
+}
+
+/* !-------------------------------places*/
+.places {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  max-width: 984px;
+}
+
+.place {
+  display: grid;
+  grid-template-areas:
+  "title url"
+  "image text";
+  grid-column-gap: 40px;
+  grid-row-gap: 48px;
+  margin: 0 0 80px;
+  grid-template-columns: 460px 1fr;
+}
+
+.place__title {
+  grid-area: title;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 76px;
+  margin: 0;
+}
+
+.place__image {
+  grid-area: image;
+  max-width: 100%;
+  justify-self: center;
+}
+
+.place__website {
+  grid-area: url;
+  align-self: end;
+}
+
+.place__url-heading {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 170%;
+  letter-spacing: 2px;
+  color: #AAAAAA;
+  margin: 0 0 12px;
+}
+
+.place__link {
+  color: inherit;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 22px;
+  transition: opacity 0.7s linear
+}
+
+.place__link:hover {
+  opacity: 0.4;
+}
+
+.place__text {
+  grid-area: text;
+  margin: 0;
+}
+
+.place__paragraph {
+  margin: 0 0 26px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 163%;
+}
