--- a/style.css
+++ b/style.css
@@ -222,3 +222,114 @@
   font-size: 18px;
   line-height: 163%;
 }
+
+/* !-------------------------------cover*/
+.cover {
+  max-width: 1184px;
+  margin: 12px auto 92px;
+}
+
+.cover__link {
+  position: relative;
+  background-image: url(./images/cover-trains.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top center;
+  width: 100%;
+  display: block;
+  min-height: 740px;
+  z-index: 0;
+  color: #fff;
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.cover__link::after {
+  position: absolute;
+  left: 0;
+  top: 0;
+  content: " ";
+  display: block;
+  background-color: #2A2C2F;
+  width: 100%;
+  height: 100%;
+  opacity: 0.3;
+  z-index: -1;
+  transition: opacity linear 1.1s;
+}
+
+.cover__link:hover::after {
+  opacity: 0.8;
+  background-color: #2A2C2F;
+}
+
+.cover__title {
+  font-style: normal;
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 76px;
+  text-align: center;
+  max-width: 560px;
+  margin: 0 0 32px;
+}
+
+.cover__subtitle {
+  text-align: center;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 22px;
+  max-width: 360px;
+  margin: 0;
+}
+
+/* !-------------------------------footer*/
+.footer {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1184px;
+  margin: 0 auto;
+  padding-bottom: 24px;
+}
+
+.footer__links {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  align-items: center;
+}
+
+.footer__item {
+  margin-right: 18px;
+}
+
+.footer__item:last-child {
+  margin-right: 0;
+}
+
+.footer__link {
+  text-decoration: none;
+  color: inherit;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 18px;
+  transition: opacity 0.7s linear;
+}
+
+.footer__link:hover {
+  opacity: 0.4;
+}
+
+.footer__copyright {
+  margin: 0;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: right;
+}
