--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,3 +5,22 @@
   display: flex;
   justify-content: space-between;
 }
+
+@media screen and (max-width: 1280px) {
+  .header {
+    margin: 0 48px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    margin: 0 24px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .header {
+    margin: 0 16px;
+    padding-top: 16px;
+  }
+}
