--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,6 +1,17 @@
 .intro {
-  display: flex;
-  flex-direction: column;
   margin: 0 auto;
   max-width: 984px;
+}
+
+@media screen and (max-width: 1024px) {
+  .intro {
+    max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .intro {
+    max-width: 768px;
+    margin: 0 24px;
+  }
 }
