--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -7,3 +7,18 @@
   max-width: 640px;
   margin: 0 0 64px;
 }
+
+@media screen and (max-width: 1024px) {
+  .lead__subtitle {
+    margin: 0 0 56px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .lead__subtitle {
+    margin: 0 0 40px;
+    max-width: 288px;
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
