--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -7,3 +7,18 @@
   margin: 56px 0 32px;
   max-width: 720px;
 }
+
+@media screen and (max-width: 1024px) {
+  .lead__title {
+    margin: 48px 0 32px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .lead__title {
+    margin: 48px 0 16px;
+    max-width: 288px;
+    font-size: 40px;
+    line-height: 44px;
+  }
+}
