--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -5,3 +5,30 @@
   margin: 0 auto;
   max-width: 984px;
 }
+
+@media screen and (max-width: 1280px) {
+  .lead {
+    margin: 0 148px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .lead {
+    margin: 0 48px;
+    max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .lead {
+    margin: 0;
+    max-width: 768px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .lead {
+    margin: 0;
+    max-width: 320px;
+  }
+}
