--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -5,3 +5,9 @@
   line-height: 163%;
   margin: 0 0 33px;
 }
+
+@media screen and (max-width: 320px) {
+  .intro__title {
+    margin: 0 0 34px;
+  }
+}
