--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -5,3 +5,17 @@
   line-height: 58px;
   margin: 92px 0 40px;
 }
+
+@media screen and (max-width: 768px) {
+  .intro__title {
+    margin: 88px 0 40px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .intro__title {
+    margin: 64px 0 40px;
+    font-size: 32px;
+    line-height: 35px;
+  }
+}
