--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -6,6 +6,7 @@
 @media screen and (max-width: 1024px) {
   .intro {
     max-width: 928px;
+    margin: 0 48px;
   }
 }
 
@@ -13,5 +14,12 @@
   .intro {
     max-width: 768px;
     margin: 0 24px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .intro {
+    max-width: 320px;
+    margin: 0 16px;
   }
 }
