--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -2,6 +2,40 @@
   display: grid;
   max-width: 1184px;
   grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
+  /* grid-template-columns: repeat(4, 1fr); */
   grid-gap: 16px;
   margin: 92px auto;
+}
+
+
+@media screen and (max-width: 1280px) {
+  .photo-grid {
+    padding: 0 38px 0 38px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .photo-grid {
+    /* grid-template-columns: repeat(3, 1fr); */
+    grid-gap: 14px;
+    padding: 0 48px 0 48px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .photo-grid {
+    /* grid-template-columns: repeat(2, 1fr); */
+    grid-gap: 16px;
+    padding: 0 24px 0 24px;
+    margin: 88px auto;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .photo-grid {
+    /* grid-template-columns: 1fr; */
+    grid-gap: 12px;
+    padding: 0 16px 0 16px;
+    margin: 64px auto;
+  }
 }
