--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -5,3 +5,23 @@
   font-size: 18px;
   line-height: 163%;
 }
+
+@media screen and (max-width: 1024px) {
+  .place__paragraph {
+    margin: 0 0 27px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .place__paragraph {
+    margin: 0 0 25px;
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place__paragraph {
+    margin: 0 0 25px;
+    font-size: 16px;
+  }
+}
