--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -6,3 +6,17 @@
   line-height: 76px;
   margin: 0;
 }
+
+@media screen and (max-width: 768px) {
+  .place__paragraph {
+    font-size: 42px;
+    line-height: 46px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place__paragraph {
+    font-size: 32px;
+    line-height: 35px;
+  }
+}
