--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -7,3 +7,15 @@
   color: #AAAAAA;
   margin: 0 0 12px;
 }
+
+@media screen and (max-width: 768px) {
+  .place__paragraph {
+    line-height: 100%;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place__paragraph {
+    line-height: 100%;
+  }
+}
