--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -8,3 +8,31 @@
   margin: 0 0 80px;
   grid-template-columns: 460px 1fr;
 }
+
+@media screen and (max-width: 1024px) {
+  .place {
+    grid-column-gap: 32px;
+    grid-template-columns: 440px 1fr;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .place {
+    grid-column-gap: 28px;
+    grid-template-columns: 340px 1fr;
+    margin: 0 0 73px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place {
+    grid-template-areas:
+    "title"
+    "url"
+    "image"
+    "text";
+    grid-row-gap: 32px;
+    grid-column-gap: 0;
+  }
+}
+
