--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -4,3 +4,30 @@
   margin: 0 auto;
   max-width: 984px;
 }
+
+@media screen and (max-width: 1280px) {
+  .places {
+    margin: 0 148px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .places {
+    margin: 0 48px;
+    max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .places {
+    margin: 0 24px;
+    max-width: 720px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .places {
+    margin: 0;
+    max-width: 320px;
+  }
+}
