--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -8,15 +8,16 @@
 }
 
 @media screen and (max-width: 768px) {
-  .place__paragraph {
+  .place__title {
     font-size: 42px;
     line-height: 46px;
   }
 }
 
 @media screen and (max-width: 320px) {
-  .place__paragraph {
+  .place__title {
     font-size: 32px;
     line-height: 35px;
+    margin: 0 16px;
   }
 }
