--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -8,8 +8,18 @@
   margin: 0 0 64px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
   .lead__subtitle {
+    font-size: calc(16px + ((30 - 16) + (30 - 16) * 0.7) * ((100vw - 320px) / 690));
+    line-height: calc(20px + (16 + 16  * 0.7) * ((100vw - 320px) / 690));
+    padding: 0 64px;
+    margin: 0 0 56px;
+  }
+}
+
+@media screen and (max-width: 385px) {
+  .lead__subtitle {
+    padding: 0 16px;
     margin: 0 0 56px;
   }
 }
@@ -20,5 +30,8 @@
     max-width: 288px;
     font-size: 16px;
     line-height: 20px;
+    padding: 0 16px;
+    margin: 0 0 40px;
   }
 }
+
