--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -2,33 +2,29 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0 auto;
   max-width: 984px;
+  padding: 56px 148px 0;
+  justify-content: center;
 }
 
-@media screen and (max-width: 1280px) {
-  .lead {
-    margin: 0 148px;
-  }
-}
 
 @media screen and (max-width: 1024px) {
   .lead {
-    margin: 0 48px;
+    padding: 48px 48px 0;
     max-width: 928px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .lead {
-    margin: 0;
+    padding: 48px 0 0;
     max-width: 768px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .lead {
-    margin: 0;
+    padding: 48px 0 0;
     max-width: 320px;
   }
 }
