--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -10,3 +10,10 @@
 .place__link:hover {
   opacity: 0.4;
 }
+
+
+@media screen and (max-width: 320px) {
+  .place__link {
+    margin: 0 16px;
+  }
+}
