--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -6,12 +6,6 @@
   line-height: 163%;
 }
 
-@media screen and (max-width: 1024px) {
-  .place__paragraph {
-    margin: 0 0 27px;
-  }
-}
-
 @media screen and (max-width: 768px) {
   .place__paragraph {
     margin: 0 0 25px;
@@ -21,7 +15,7 @@
 
 @media screen and (max-width: 320px) {
   .place__paragraph {
-    margin: 0 0 25px;
+    margin: 0 16px 25px;
     font-size: 16px;
   }
 }
