--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -2,20 +2,15 @@
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
-  line-height: 170%;
+  line-height: 12px;
   letter-spacing: 2px;
   color: #AAAAAA;
   margin: 0 0 12px;
 }
 
-@media screen and (max-width: 768px) {
-  .place__paragraph {
-    line-height: 100%;
-  }
-}
 
 @media screen and (max-width: 320px) {
-  .place__paragraph {
-    line-height: 100%;
+  .place__url-heading {
+    margin: 0 16px 12px;
   }
 }
