--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,9 +1,19 @@
 .cover__subtitle {
+  box-sizing: border-box;
   text-align: center;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
   line-height: 22px;
-  max-width: 360px;
+  max-width: 380px;
   margin: 0;
+  padding: 0 10px;
+}
+
+@media screen and (max-width: 320px) {
+  .cover__subtitle {
+    font-size: 14px;
+    line-height: 16px;
+    max-width: 289px;
+  }
 }
