--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -7,3 +7,30 @@
   max-width: 560px;
   margin: 0 0 32px;
 }
+
+@media screen and (max-width: 505px) {
+  .cover__title {
+    font-weight: 900;
+    font-size: 50px;
+    line-height: 50px;
+    margin: 0 0 16px;
+  }
+}
+
+@media screen and (max-width: 351px) {
+  .cover__title {
+    font-weight: 900;
+    font-size: 40px;
+    line-height: 40px;
+    margin: 0 0 16px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .cover__title {
+    font-weight: 900;
+    font-size: 32px;
+    line-height: 35px;
+    margin: 0 0 16px;
+  }
+}
