--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -47,6 +47,12 @@
   }
 }
 
+@media screen and (max-width: 400px) {
+  .cover__link {
+    min-height: 350px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .cover__link {
     min-height: 200px;
