--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -4,11 +4,12 @@
   font-size: 72px;
   line-height: 76px;
   text-align: center;
-  max-width: 560px;
+  max-width: 580px;
   margin: 0 0 32px;
+  padding: 0 10px;
 }
 
-@media screen and (max-width: 505px) {
+@media screen and (max-width: 525px) {
   .cover__title {
     font-weight: 900;
     font-size: 50px;
@@ -17,7 +18,7 @@
   }
 }
 
-@media screen and (max-width: 351px) {
+@media screen and (max-width: 370px) {
   .cover__title {
     font-weight: 900;
     font-size: 40px;
