--- a/blocks/footer/__item/footer__item.css
+++ b/blocks/footer/__item/footer__item.css
@@ -5,3 +5,13 @@
 .footer__item:last-child {
   margin-right: 0;
 }
+
+@media screen and (max-width: 510px) {
+  .footer__item {
+    margin-bottom: 32px;
+  }
+  
+  .footer__item:last-child {
+    margin-bottom: 0;
+  }
+}
