--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -11,3 +11,10 @@
 .footer__link:hover {
   opacity: 0.4;
 }
+
+@media screen and (max-width: 510px) {
+  .footer__link{
+    font-size: 24px;
+    line-height: 24px;
+  }
+}
