--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,7 +1,15 @@
 .footer__links {
   display: flex;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
   list-style-type: none;
   align-items: center;
+}
+
+@media screen and (max-width: 510px) {
+  .footer__links {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
