--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,7 +1,34 @@
 .footer {
+  box-sizing: border-box;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
-  max-width: 1184px;
+  max-width: 1204px;
   margin: 0 auto;
-  padding-bottom: 24px;
+  padding: 0 10px 24px;
+}
+
+@media screen and (max-width: 1024px) {
+  .footer {
+    padding: 0 48px 24px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    padding: 0 24px 24px;
+  }
+}
+
+@media screen and (max-width: 717px) {
+  .footer {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .footer {
+    flex-wrap: wrap;
+  }
 }
