--- a/blocks/header/__lang/header__lang.css
+++ b/blocks/header/__lang/header__lang.css
@@ -4,4 +4,12 @@
   padding: 0;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 0;
 }
+
+@media screen and (max-width: 320px) {
+  .header__lang {
+    margin-bottom: 10px;
+  }
+}
+
