--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,6 +4,7 @@
   padding-top: 28px;
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
 }
 
 @media screen and (max-width: 1280px) {
