--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -18,4 +18,9 @@
     margin: 0 16px 9px;
     font-size: 16px;
   }
+
+  .place__paragraph:nth-child(1) {
+    margin: 0 16px 25px;
+    font-size: 16px;
+  }
 }
