--- a/blocks/intro/__container/intro__container.css
+++ b/blocks/intro/__container/intro__container.css
@@ -5,11 +5,13 @@
 @media screen and (max-width: 768px) {
   .intro {
     max-width: 720px;
+    margin: 0 25px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .intro {
     max-width: 288px;
+    margin: 0 20px;
   }
 }
