--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -13,7 +13,7 @@
     font-size: calc(16px + ((30 - 16) + (30 - 16) * 0.61) * ((100vw - 320px) / 690));
     line-height: calc(20px + (16 + 16  * 0.7) * ((100vw - 320px) / 690));
     padding: 0 64px;
-    margin: 0 0 56px;
+    margin: -10px 0 56px;
   }
 }
 
