--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -3,8 +3,16 @@
   max-width: 984px;
 }
 
+@media screen and (max-width: 1280px) {
+  .intro {
+    padding-left: 148px;
+    margin-left: 0;
+  }
+}
+
 @media screen and (max-width: 1024px) {
   .intro {
+    padding-left: 0;
     max-width: 928px;
     margin: 0 48px;
   }
