--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -10,7 +10,7 @@
 
 @media screen and (max-width: 1280px) {
   .photo-grid {
-    padding: 0 48px 0 48px;
+    padding: 0 48px;
   }
 }
 
@@ -18,7 +18,6 @@
   .photo-grid {
     /* grid-template-columns: repeat(3, 1fr); */
     grid-gap: 14px;
-    padding: 0 48px 0 48px;
   }
 }
 
@@ -35,7 +34,7 @@
   .photo-grid {
     /* grid-template-columns: 1fr; */
     grid-gap: 12px;
-    padding: 0 16px 0 16px;
-    margin: 64px auto 64px;
+    padding: 0 16px;
+    margin: 64px auto;
   }
 }
