--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -8,11 +8,13 @@
   max-width: 720px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 321px) and (max-width: 767px) {
   .lead__title {
-    padding: 0 24px;
-    font-size: calc(40px + (56 + 56 * 0.61) * ((100vw - 320px) / 720));
-    line-height: calc(44px + (56 + 56 * 0.7) * ((100vw - 320px) / 720));
+    max-width: 315px;
+    font-size: 42px;
+    line-height: 46px;
+    padding: 0 16px;
+    margin: 0 0 16px;
   }
 }
 
@@ -21,7 +23,6 @@
     max-width: 288px;
     font-size: 40px;
     line-height: 44px;
-    padding: 0 16px;
     margin: 0 0 16px;
   }
 }
