--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -14,6 +14,7 @@
   .cover__subtitle {
     font-size: 14px;
     line-height: 16px;
-    max-width: 289px;
+    max-width: 287px;
+    padding-left: 17px;
   }
 }
