--- a/blocks/intro/__container/intro__container.css
+++ b/blocks/intro/__container/intro__container.css
@@ -3,15 +3,13 @@
 }
 
 @media screen and (max-width: 768px) {
-  .intro {
+  .intro__container  {
     max-width: 720px;
-    margin: 0 25px;
   }
 }
 
 @media screen and (max-width: 320px) {
-  .intro {
+  .intro__container  {
     max-width: 288px;
-    margin: 0 20px;
   }
 }
