--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -3,7 +3,7 @@
   font-weight: 900;
   font-size: 54px;
   line-height: 58px;
-  margin: 83px 0 40px;
+  margin: 92px 0 40px;
 }
 
 @media screen and (max-width: 768px) {
@@ -17,5 +17,6 @@
     margin: 64px 0 40px;
     font-size: 32px;
     line-height: 35px;
+    max-width: 251px;
   }
 }
