--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,12 +1,23 @@
 .place__paragraph {
-  margin: 0 0 26px;
+  margin: 0 0 27px;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
   line-height: 163%;
 }
 
-@media screen and (max-width: 768px) {
+.place__paragraph:last-child {
+  margin: 0;
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1279px) {
+  .place__paragraph {
+    margin: 0 0 25px;
+    font-size: 17px;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 1023px) {
   .place__paragraph {
     margin: 0 0 25px;
     font-size: 16px;
@@ -16,9 +27,15 @@
 @media screen and (max-width: 320px) {
   .place__paragraph {
     margin: 0 16px 9px;
+    font-size: 16px;
   }
 
   .place__paragraph:nth-child(1) {
     margin: 0 16px 25px;
+  }
+
+  .place__paragraph:last-child {
+    margin: 0 16px;
+    max-width: 284px
   }
 }
