--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -9,20 +9,38 @@
   grid-template-columns: 460px 1fr;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 1025px) and (max-width: 1279px) {
   .place {
-    grid-column-gap: 32px;
-    grid-template-columns: 440px 1fr;
-  }
-}
-
-@media screen and (max-width: 1024px) {
-  .place {
-    margin: 0 0 66px;
+    grid-template-columns: 380px 1fr;
+    grid-column-gap: 40px;
   }
 
   .place:last-child {
-    margin: 0 0 90px;
+    margin: 0 0 80px;
+  }
+}
+
+
+@media screen and (max-width: 1024px) {
+  .place {
+    margin: 0 0 80px;
+    grid-column-gap: 32px;
+    grid-template-columns: 440px 1fr;
+  }
+
+  .place:last-child {
+    margin: 0 0 80px;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1023px) {
+  .place {
+    grid-template-columns: 380px 1fr;
+    grid-column-gap: 14px;
+  }
+
+  .place:last-child {
+    margin: 0 0 58px;
   }
 }
 
@@ -30,7 +48,17 @@
   .place {
     grid-column-gap: 28px;
     grid-template-columns: 340px 1fr;
-    margin: 0 0 48px;
+    margin: 0 0 73px;
+  }
+
+  .place:last-child {
+    margin: 0 0 90px;
+  }
+}
+
+@media screen and (min-width: 632px) and (max-width: 767px) {
+  .place {
+    grid-column-gap: 14px;
   }
 
   .place:last-child {
@@ -46,13 +74,13 @@
     "image"
     "text";
     grid-row-gap: 32px;
-    margin: 0 0 41px;
+    margin: 0 0 50px;
     grid-template-columns: 100%;
   }
 }
 
 @media screen and (max-width: 320px) {
-  .place {
+  /* .place {
     grid-template-areas:
     "title"
     "url"
@@ -61,6 +89,10 @@
     grid-row-gap: 32px;
     margin: 0 0 41px;
     grid-template-columns: 100%;
+  } */
+
+  .place:last-child {
+    margin: 0 0 41px;
   }
 }
 
